Fixed scroll issue where last few items were clipped.

--- a/public/styles.css
+++ b/public/styles.css
@@ -41,7 +41,7 @@
 }
 
 .relatedPurchase {
-  flex: 0 1 20%;
+  flex: 1 0 20%;
   width: 20vw;
   overflow: hidden;
   max-height: 100%;
